Fixed Forge version.